[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/hud.gd" type="Script" id=1]
[ext_resource path="res://ui/HudCounter.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/rough.png" type="Texture" id=3]

[node name="Hud" type="Node2D"]
script = ExtResource( 1 )

[node name="BrickCount" parent="." instance=ExtResource( 2 )]
position = Vector2( 48, 16 )
visible_digits = 3

[node name="LostBalls" parent="." instance=ExtResource( 2 )]
position = Vector2( 228, 16 )
visible_digits = 4

[node name="BallSpeed" parent="." instance=ExtResource( 2 )]
position = Vector2( 408, 16 )
visible_digits = 5

[node name="BallSpeedIcon" type="Sprite" parent="BallSpeed"]
position = Vector2( -32, 0 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 96, 0, 32, 32 )

[node name="PaddleSpeed" parent="." instance=ExtResource( 2 )]
position = Vector2( 588, 16 )
visible_digits = 5

[node name="PaddleSpeedIcon" type="Sprite" parent="PaddleSpeed"]
position = Vector2( -32, 0 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 128, 0, 32, 32 )

[node name="Score" parent="." instance=ExtResource( 2 )]
position = Vector2( 768, 16 )
visible_digits = 8
